--- a/app/src/main/res/layout/activity_customers_map.xml
+++ b/app/src/main/res/layout/activity_customers_map.xml
@@ -101,7 +101,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/blue"
         android:text="Call a CAB"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/blue"
         android:text="Settings"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/blue"
         android:text="Logout"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
