--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -49,4 +49,16 @@
         android:textColor="#F7E61313"
         android:textSize="36sp"
         android:textStyle="bold"></Button>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="284dp"
+        android:layout_height="113dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="1dp"
+        app:srcCompat="@drawable/pawlogo"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 </RelativeLayout>
