--- a/app/src/main/res/layout/activity_customer_login_register.xml
+++ b/app/src/main/res/layout/activity_customer_login_register.xml
@@ -21,32 +21,15 @@ tools:context=".CustomerLoginRegisterActivity"
     android:textSize="24dp"
     android:textStyle="bold" />
 
-<EditText
-    android:id="@+id/customer_email"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="280dp"
-    android:layout_marginRight="20dp"
-    android:background="@drawable/input_design"
-    android:hint="Email"
-    android:inputType="text"
-    android:padding="12dp"
-    android:textColor="@color/black"
-    android:textColorHint="@color/black"
-    android:textSize="17sp"
-    android:textStyle="bold" />
-
-
     <EditText
-    android:id="@+id/customer_password"
+        android:id="@+id/customer_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="280dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:hint="Password"
+        android:hint="@string/customer_email"
         android:inputType="text"
         android:padding="12dp"
         android:textColor="@color/black"
@@ -54,19 +37,36 @@ tools:context=".CustomerLoginRegisterActivity"
         android:textSize="17sp"
         android:textStyle="bold" />
 
-<Button
-    android:id="@+id/customer_login_btn"
-    android:layout_width="200dp"
-    android:layout_height="50dp"
-    android:background="@drawable/buttons"
-    android:text="Login"
-    android:textAllCaps="false"
-    android:textColor="@color/black"
-    android:textColorHint="@color/black"
-    android:textSize="24sp"
-    android:layout_marginTop="450dp"
-    android:layout_below="@+id/driver_password"
-    android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:id="@+id/customer_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/input_design"
+        android:hint="@string/customer_password"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/customer_login_btn"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/driver_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="450dp"
+        android:background="@drawable/buttons"
+        android:text="@string/customer_login_btn"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="24sp" />
 
 <TextView
     android:id="@+id/customer_register_link"
@@ -80,15 +80,16 @@ tools:context=".CustomerLoginRegisterActivity"
     android:textAllCaps="false"
     android:textColor="@android:color/holo_red_dark"
     android:textSize="16sp" />
-<Button
-    android:id="@+id/customer_register_btn"
-    android:layout_width="200dp"
-    android:layout_height="50dp"
-    android:layout_below="@+id/driver_register_link"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="500dp"
-    android:background="@drawable/buttons"
-    android:text="Register"
-    android:textColor="@android:color/background_light"
-    android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/customer_register_btn"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/driver_register_link"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="550dp"
+        android:background="@drawable/buttons"
+        android:text="@string/customer_register_btn"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp" />
 </RelativeLayout>
