--- a/app/src/main/res/layout/activity_customers_map.xml
+++ b/app/src/main/res/layout/activity_customers_map.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/blue"
     tools:context=".CustomersMapActivity">
 
 
@@ -94,15 +94,14 @@
     </RelativeLayout>
 
 
-
     <Button
         android:id="@+id/customer_hail_taxi_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:background="@color/blue"
-        android:text="Call a CAB"
+        android:text="@string/customer_hail_taxi_btn"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="23sp"
