--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="150dp"
         android:background="@drawable/input_design"
         android:padding="20dp"
-        android:text="I'm a Customer"
+        android:text="@string/customer_welcome_btn"
         android:textAllCaps="false"
         android:textColor="#F7E61313"
         android:textSize="36sp"
@@ -44,7 +44,7 @@
         android:layout_marginBottom="255dp"
         android:background="@drawable/buttons"
         android:padding="20dp"
-        android:text="I'm a Driver"
+        android:text="@string/driver_welcome_btn"
         android:textAllCaps="false"
         android:textColor="#F7E61313"
         android:textSize="36sp"
