--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,173 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailsActivity">
+    android:background="?attr/colorBackgroundFloating"
+    tools:context=".RequestActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="149dp"
-        android:layout_marginTop="0dp"
-        android:background="@drawable/image7"
-        android:contentDescription="TODO"
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="409dp"
+        android:layout_height="39dp"
+        android:text="@string/getService"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/etinputFname"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="341dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="14dp"
-        android:text="how_many_dogs"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="330dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:text="select_one"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textIsSelectable="false"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="337dp"
+    <EditText
+        android:id="@+id/etinputFname"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="breed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        android:layout_below="@+id/etinputLname"
+        android:layout_marginTop="60dp"
+        android:hint="@string/hintName"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/textView17"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="342dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        android:id="@+id/etinputLname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etinputPhone"
+        android:layout_marginTop="60dp"
+        android:hint="@string/hintDogs"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/etinputFname"
+        tools:layout_editor_absoluteX="0dp" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="341dp"
-        android:layout_height="17dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/etinputPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etinputEmail"
+        android:layout_marginTop="12dp"
+        android:hint="@string/hintBreed"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/etinputLname"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/etinputEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etinputSubject"
+        android:layout_marginTop="60dp"
+        android:hint="@string/hintSize"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/etinputPhone"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/etinputSubject"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etinputMsg"
+        android:layout_marginTop="60dp"
+        android:hint="@string/hintSitter"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/etinputEmail"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <EditText
+        android:id="@+id/etinputMsg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/butSave"
+        android:layout_marginTop="60dp"
+        android:hint="@string/hintDays"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/etinputSubject"
+        tools:layout_editor_absoluteX="1dp" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="339dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="select_one"
-        android:textAllCaps="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="344dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="8dp"
-        android:text="sitter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="346dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="347dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="8dp"
-        android:text="starting_date"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        tools:ignore="MissingConstraints" />
-
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="344dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="341dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="days"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName5"
-        android:layout_width="343dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/butSave"
+        android:layout_width="70dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="16dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="@string/SaveB"
+        android:textColor="#FDFCFC"
+        app:layout_constraintBaseline_toBaselineOf="@+id/butShow"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="409dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="14dp"
-        android:background="@android:color/holo_red_light"
-        android:text="Send"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
-        tools:ignore="MissingConstraints" />
-</LinearLayout>
-</ScrollView>
+        android:id="@+id/butShow"
+        android:layout_width="75dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="20dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="@string/showB"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBaseline_toBaselineOf="@+id/butUpdate"
+        app:layout_constraintStart_toEndOf="@+id/butSave" />
+
+    <Button
+        android:id="@+id/butUpdate"
+        android:layout_width="70dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="20dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="@string/UpdB"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBaseline_toBaselineOf="@+id/butDelete"
+        app:layout_constraintStart_toEndOf="@+id/butShow" />
+
+    <Button
+        android:id="@+id/butDelete"
+        android:layout_width="70dp"
+        android:layout_height="46dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="@string/DelB"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.746"
+        app:layout_constraintStart_toEndOf="@+id/butUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/etinputMsg"
+        app:layout_constraintVertical_bias="0.795" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
