--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -11,10 +11,11 @@
         android:id="@+id/textView17"
         android:layout_width="409dp"
         android:layout_height="39dp"
+        android:fontFamily="@font/alegreya_bold"
         android:text="@string/contact_us"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/etinputFname"
         app:layout_constraintEnd_toEndOf="parent"
