--- a/app/src/main/res/layout/activity_payment2.xml
+++ b/app/src/main/res/layout/activity_payment2.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="64dp"
+        android:fontFamily="@font/alegreya_bold"
         android:hint="@string/n_payment_header"
         android:textColorHint="#F5F5F5"
         android:textSize="32dp"
